year4/#sem2/IDP/project/configs/adminer/adminer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
