year4/#sem2/IDP/project/configs/adminer/adminer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer
  annotations:
    konghq.com/strip-path: 'false'
spec:
  parentRefs:
  - name: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /adminer
    backendRefs:
    - name: adminer
      kind: Service
      port: 8080
